added tests and refactored code

--- a/TlrgAutomation/App.config
+++ b/TlrgAutomation/App.config
@@ -1,6 +1,21 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <appSettings>
-    <add key="UseCurrentDirectory" value="true"/>
-  </appSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings">
+            <section name="TlrgAutomation.Properties.RunSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
+    <applicationSettings>
+        <TlrgAutomation.Properties.RunSettings>
+            <setting name="Run_Environment" serializeAs="String">
+                <value>DEV1</value>
+            </setting>
+            <setting name="Run_Headless" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Api_Url" serializeAs="String">
+                <value>localhost</value>
+            </setting>
+        </TlrgAutomation.Properties.RunSettings>
+    </applicationSettings>
+</configuration>
